# cmake-opencv-project-template

./: .gitignore  CMakeBuild.bat  CMakeBuild_MinGW.bat  CMakeBuild_default.bat  CMakeBuild_linux.sh  CMakeLists.txt  README.md  conanfile.txt
src/: functions.cpp  functions.h  main.cpp
